# aisd-l-migration

./: .gitignore  README.md
src/rosbag_logger/: CMakeLists.txt  package.xml
src/rosbag_logger/config/: setconfig.yaml  topics.txt
src/rosbag_logger/include/: rosbag_logger.hpp
src/rosbag_logger/src/: rosbag_logger.cpp
src/rosbag_logger_interfaces/: CMakeLists.txt  package.xml
src/rosbag_logger_interfaces/msg/: InfoMessage.msg  RosbagLogger.msg
src/rosbags_to_csv/: CMakeLists.txt
src/rosbags_to_csv/bag_files/rosbag2_2025_04_24-10_45_07/: .metadata.yaml.swp  metadata.yaml  rosbag2_2025_04_24-10_45_07_0.db3  rosbag2_2025_04_24-10_45_07_0.db3-shm  rosbag2_2025_04_24-10_45_07_0.db3-wal
src/rosbags_to_csv/config/bag_files/bag_with_topics_and_service_events_and_action/: metadata.yaml
src/rosbags_to_csv/config/bag_files/rosbag2_2025_04_24-10_45_07/: rosbag2_2025_04_24-10_45_07_0.db3
src/rosbags_to_csv/config/bag_files/rosbag2_2025_05_09-10_02_28/: metadata.yaml  rosbag2_2025_05_09-10_02_28_0.db3
src/rosbags_to_csv/config/csv/: message_definitions.csv  metadata.csv
src/rosbags_to_csv/config/csv_files/: messages.csv  schema.csv  topics.csv
src/rosbags_to_csv/include/: rosbags_to_csv.hpp
src/rosbags_to_csv/include/MessagesHandler/: messages_handler.hpp
src/rosbags_to_csv/install/: local_setup.sh  setup.sh
src/rosbags_to_csv/install/rosbags_to_csv/lib/rosbags_to_csv/: rosbags_to_csv
src/rosbags_to_csv/install/rosbags_to_csv/share/ament_index/resource_index/parent_prefix_path/: rosbags_to_csv
src/rosbags_to_csv/install/rosbags_to_csv/share/rosbags_to_csv/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/rosbags_to_csv/install/rosbags_to_csv/share/rosbags_to_csv/cmake/: rosbags_to_csvConfig.cmake
src/rosbags_to_csv/launch/: rosbags_to_csv.launch.py
src/rosbags_to_csv/log/: latest_build
src/rosbags_to_csv/src/: rosbags_to_csv.cpp
