<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbag_logger</name>
  <version>0.0.0</version>
  <description>Package for logging to rosbag with custom message types</description>
  <maintainer email="adwait@aidrivers.ai">adwait</maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime-only dependencies -->
  <exec_depend>rosbag_logger_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
